--- a/Cell_Tiering_Datahub.ipynb
+++ b/Cell_Tiering_Datahub.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Specify Batches of Interest"
+    "### Specify Inputs"
    ]
   },
   {
@@ -612,7 +612,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##save spreadsheet\n",
+    "##save Tiering spreadsheet\n",
     "current_date = datetime.now().strftime('%Y-%m-%d')\n",
     "output_name = f'{current_date}_Tiered.xlsx'\n",
     "CellTiering.to_excel(output_name, index=False)\n"
@@ -637,7 +637,7 @@
     }
    ],
    "source": [
-    "# %% WIP \n",
+    "## Pair cells and save Tiered&Paired spreadsheet\n",
     "\n",
     "df = CellTiering\n",
     "df = df[df['Cell Status'] == 'Waiting'] # Filter rows where \"Cell Status\" is 'Waiting'\n",
