--- a/Cell_Tiering_Datahub.ipynb
+++ b/Cell_Tiering_Datahub.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,24 +467,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing group starting at rank [1, 2, 3]: ['UCB003AN-US01-11', 'UCB003AM-US00-35', 'UCB003AN-US01-31']\n",
-      "ASR range: 0.19709999999999894, ASR mean-min: 0.0813666666666677\n",
-      "Established group starting at rank [1, 2, 3]: ['UCB003AN-US01-11', 'UCB003AM-US00-35', 'UCB003AN-US01-31']\n",
-      "Rows in remainder after processing: 3\n",
-      "Processing group starting at rank [4, 5, 6]: ['UCB003AN-US01-14', 'UCB003AL-US00-70', 'UCB003AM-US00-07']\n",
-      "ASR range: 3.3887, ASR mean-min: 1.9090333333333334\n",
-      "ASR range is too high at 3.3887, replacing problem cell: UCB003AM-US00-07\n",
-      "No more rows in remainder to replace UCB003AM-US00-07.\n",
-      "Minimum ASR is too low at difference of 1.9090333333333334, replacing problem cell: UCB003AN-US01-14\n",
-      "No more rows in remainder to replace UCB003AN-US01-14.\n",
-      "Final Tier 1 DataFrame has 6 rows.\n"
+      "Processing group starting at rank [1, 2, 3]: ['UCB003AN-US01-11', 'UCB003AN-US01-31', 'UCB003AN-US01-14']\n",
+      "ASR range: 0.0683000000000007, ASR mean-min: 0.03843333333333376\n",
+      "Established group starting at rank [1, 2, 3]: ['UCB003AN-US01-11', 'UCB003AN-US01-31', 'UCB003AN-US01-14']\n",
+      "Rows in remainder after processing: 2\n",
+      "Final Tier 1 DataFrame has 5 rows.\n"
      ]
     }
    ],
@@ -650,12 +644,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function to rearrange rows in pyramid order within each group\n",
     "def pyramid_order(group):\n",
+    "    # Check if the group number is 'Remainder'\n",
+    "    group_number = group['Group Number'].iloc[0]\n",
+    "    if group_number == 'Remainder':\n",
+    "        # Sort rows in ascending order\n",
+    "        sorted_group = group.sort_values(by='MedDischargeASR_1C', ascending=True).reset_index(drop=True)\n",
+    "        sorted_group['Group Number'] = sorted_group['Group Number'].astype(str) + \".\" + (sorted_group.index + 1).astype(str)\n",
+    "        return sorted_group\n",
+    "    \n",
     "    # Sort values within the group\n",
     "    sorted_group = group.sort_values(by='MedDischargeASR_1C', ascending=True).reset_index(drop=True)\n",
     "    \n",
@@ -702,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1264,6 +1266,13 @@
     "else:\n",
     "    print(\"No Tier 3 dataframe to rearrange\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
