--- a/Cell_Tiering_Datahub.ipynb
+++ b/Cell_Tiering_Datahub.ipynb
@@ -632,7 +632,7 @@
     "# Save the ranked cells to an Excel file\n",
     "current_date = datetime.now().strftime('%Y-%m-%d')\n",
     "output_name = f'{current_date}_{batches}_Tier_1_Grouped.xlsx'\n",
-    "df_final.to_excel(output_name, index=False)"
+    "#df_final.to_excel(output_name, index=False)"
    ]
   },
   {
@@ -919,7 +919,7 @@
     "# Save the ranked cells to an Excel file\n",
     "current_date = datetime.now().strftime('%Y-%m-%d')\n",
     "output_name = f'{current_date}_{batches}_Tier_2_Grouped.xlsx'\n",
-    "df_final_Two.to_excel(output_name, index=False)"
+    "#df_final_Two.to_excel(output_name, index=False)"
    ]
   },
   {
@@ -1235,7 +1235,7 @@
     "# Save the ranked cells to an Excel file\n",
     "current_date = datetime.now().strftime('%Y-%m-%d')\n",
     "output_name = f'{current_date}_{batches}_Tier_3_Grouped.xlsx'\n",
-    "df_final_Three.to_excel(output_name, index=False)"
+    "#df_final_Three.to_excel(output_name, index=False)"
    ]
   },
   {
