Removed reliance on genealogy and electric metrics scripts

--- a/Cell_Tiering_Datahub.ipynb
+++ b/Cell_Tiering_Datahub.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,10 +21,9 @@
     "Layers = 3  # Number of samples in each group\n",
     "\n",
     "# Specify any cracked cells\n",
-    "CrackedCells = [\n",
-    "    \"UCB003AL-US00-23\", \"UCB003AL-US00-40\", \"UCB003AN-US00-19\"\n",
-    "]\n",
+    "CrackedCells = [\"UCB003AL-US00-23\", \"UCB003AL-US00-40\", \"UCB003AN-US00-19\"]\n",
     "\n",
+    "#Specify any missing cells\n",
     "MissingCells = [\"UCB003AL-US00-77\", \"UCB003AL-US00-63\", \"UCB003AL-US00-26\"]\n",
     "\n",
     "#Show only yielded cells\n",
@@ -40,19 +39,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#import modules used in this script\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import genealogy_v2\n",
-    "import query_tray_samples_V4 as query_tray_samples\n",
-    "import unit_cell_electrical_yield_and_metrics_v2 as uceym\n",
     "import warnings\n",
     "from datetime import datetime\n",
     "from qsdc.client import Client\n",
+    "#import functions used in this script\n",
+    "import query_tray_samples_V4 as query_tray_samples\n",
     "#assert version(\"qs-data-client\") >= \"0.2.15\", \"qsdc version must be greater than 0.2.15\"\n",
     "\n",
     "#Remove warning messages\n",
@@ -83,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,12 +249,7 @@
     "\n",
     "## Asign Final Tier to every cell\n",
     "# Select columns that we are considering for tiering\n",
-    "columns_to_consider = [\n",
-    "    'Alignment',\n",
-    "    'Anode',\n",
-    "    'Thickness', \n",
-    "    'Edge Wetting'\n",
-    "]\n",
+    "columns_to_consider = ['Alignment', 'Anode', 'Thickness', 'Edge Wetting']\n",
     "CellTiering['Alignment'] = CellTiering['Alignment'].fillna(0)  # Replace NaN with 0 (or another placeholder)\n",
     "CellTiering['Alignment'] = CellTiering['Alignment'].astype(int) #convert to integer\n",
     "CellTiering['Anode'] = CellTiering['Anode'].astype(int) #convert to integer\n",
@@ -270,9 +263,8 @@
     "\n",
     "##Update 'Cell Status' if yielded cell is on already in a multilayer pouch, has high F2F Misalignment, or is Cracked/Scrapped\n",
     "#Update Cell if it is already in ML\n",
-    "gen = genealogy_v2.get_genealogy_2L('APD|ML|UC|QSC', conn) # Query dataframe from database\n",
-    "us_to_ps_mapping = dict(zip(gen['2L_cell_id'], gen['6L_cell_id'])) # Map the 'US_id' to '6L_cell_id' using '2L_cell_id' in the 'gen' dataframe\n",
-    "CellTiering['Cell Status'] = CellTiering['Cell ID'].map(us_to_ps_mapping)\n",
+    "merged_df = CellTiering.merge(dmlg, left_on='Cell ID', right_on='US_id', how='left') # Merge 'CellTiering' with 'dmlg' based on matching 'Cell ID' and 'US_id'\n",
+    "CellTiering['Cell Status'] = merged_df['ML6_id'].combine_first(CellTiering['Cell Status']) # Update 'Cell Status' in 'CellTiering' with corresponding 'ML6_id' where there is a match\n",
     "#Update Cell if it has high F2F Misalignment\n",
     "CellTiering.loc[CellTiering['Film-to-Film Distance'] == 'High', 'Cell Status'] = 'High F2F Alignment' \n",
     "#Update Cell if it is cracked\n",
@@ -286,11 +278,20 @@
     "#Fill in default status of 'Waiting'\n",
     "CellTiering['Cell Status'] = CellTiering['Cell Status'].fillna('Waiting')\n",
     "\n",
-    "## Update cell electrical metrics, currently using python scripts to query but will need to transition to datahub using dataframe dfc\n",
-    "df_electrical_yield_metrics = uceym.get_electrical_yield_and_metrics(CellTiering[\"Cell ID\"])\n",
-    "df_electrical_yield_metrics = df_electrical_yield_metrics[['US_id','MedDischargeASR_1C', 'DischargeCapacity_Co3', 'dVdt_delta_fastcharge']]\n",
-    "df_electrical_yield_metrics = df_electrical_yield_metrics.rename(columns={'US_id': 'Cell ID'}) #Create Tiering Spreadsheet\n",
-    "CellTiering = pd.merge(CellTiering, df_electrical_yield_metrics, left_on='Cell ID', right_on='Cell ID', how='left')\n",
+    "\n",
+    "## Update cell electrical metrics\n",
+    "def last_non_missing(series):\n",
+    "    return series.dropna().iloc[-1] if not series.dropna().empty else None\n",
+    "# Group by 'US_id' and aggregate using the last non-missing values\n",
+    "dfc_consolidated = (\n",
+    "    dfc.groupby('US_id', as_index=False)\n",
+    "    .agg({\n",
+    "        'MedDcASR': last_non_missing,\n",
+    "        'DischargeCapacity': last_non_missing\n",
+    "    })\n",
+    ")\n",
+    "dfc_consolidated = dfc_consolidated.rename(columns={'US_id': 'Cell ID','MedDcASR': 'MedDischargeASR_1C', 'DischargeCapacity': 'DischargeCapacity_Co3'})# Consolidate column renaming in a single step\n",
+    "CellTiering = pd.merge(CellTiering, dfc_consolidated, left_on='Cell ID', right_on='Cell ID', how='left')\n",
     "\n",
     "\n",
     "## Update tray location ##\n",
@@ -319,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,18 +468,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing group starting at rank [1, 2, 3]: ['UCB003AN-US01-11', 'UCB003AN-US01-31', 'UCB003AN-US01-14']\n",
-      "ASR range: 0.0683000000000007, ASR mean-min: 0.03843333333333376\n",
-      "Established group starting at rank [1, 2, 3]: ['UCB003AN-US01-11', 'UCB003AN-US01-31', 'UCB003AN-US01-14']\n",
-      "Rows in remainder after processing: 2\n",
-      "Final Tier 1 DataFrame has 5 rows.\n"
+      "Processing group starting at rank [1, 2, 3]: ['UCB003AN-US01-14', 'UCB003AL-US00-70', 'UCB003AM-US00-07']\n",
+      "ASR range: 3.3887, ASR mean-min: 1.9090333333333334\n",
+      "ASR range is too high at 3.3887, replacing problem cell: UCB003AM-US00-07\n",
+      "No more rows in remainder to replace UCB003AM-US00-07.\n",
+      "Minimum ASR is too low at difference of 1.9090333333333334, replacing problem cell: UCB003AN-US01-14\n",
+      "No more rows in remainder to replace UCB003AN-US01-14.\n",
+      "No valid groups were formed. Creating an empty DataFrame.\n",
+      "Final Tier 1 DataFrame has 3 rows.\n"
      ]
     }
    ],
@@ -644,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,13 +1274,6 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
