--- a/Cell_Tiering_Datahub.ipynb
+++ b/Cell_Tiering_Datahub.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,8 +19,9 @@
     "# Define Unit Cells in ML\n",
     "Layers = 3  # Number of unit cells in each MultiSlayer pouch\n",
     "\n",
-    "# Specify any cracked cells\n",
-    "CrackedCells = [\"UCB003AL-US00-23\", \"UCB003AL-US00-40\", \"UCB003AN-US00-19\"]\n",
+    "# Specify any defective/cracked cells\n",
+    "DefectiveCells = [\"UCB003AL-US00-23\", \"UCB003AL-US00-40\", \"UCB003AN-US00-19\"]\n",
+    "DefectiveCells = ['UCB004AB-US00-22', 'UCB004AB-US00-29']\n",
     "\n",
     "#Specify any missing cells\n",
     "MissingCells = [\"UCB003AL-US00-77\", \"UCB003AL-US00-63\", \"UCB003AL-US00-26\"]\n",
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +261,7 @@
     "#Update Cell if it has high F2F Misalignment\n",
     "CellTiering.loc[CellTiering['Film-to-Film Distance'] == 'High', 'Cell Status'] = 'High F2F Alignment' \n",
     "#Update Cell if it is cracked\n",
-    "CellTiering.loc[CellTiering['Cell ID'].isin(CrackedCells), 'Cell Status'] = 'Cracked/Scrapped'\n",
+    "CellTiering.loc[CellTiering['Cell ID'].isin(DefectiveCells), 'Cell Status'] = 'Defective/Scrapped'\n",
     "#Update Cell if it is missing\n",
     "CellTiering.loc[CellTiering['Cell ID'].isin(MissingCells), 'Cell Status'] = 'Missing/Lost'\n",
     "# Identify rows where any of the specified columns are missing or contain 0\n",
@@ -312,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +694,7 @@
     "\n",
     "    # Save the ranked cells to an Excel file\n",
     "    current_date = datetime.now().strftime('%Y-%m-%d')\n",
-    "    output_name = f'{current_date}_{batches}_Tier_1_Grouped_Pyramid_Order.xlsx'\n",
+    "    output_name = f'{current_date}_{batches}_Tier_1_Paired.xlsx'\n",
     "    df_pyramid.to_excel(output_name, index=False)\n",
     "else:\n",
     "    print(\"No Tier 1 dataframe to rearrange\")\n"
@@ -708,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +956,7 @@
     "\n",
     "    # Save the ranked cells to an Excel file\n",
     "    current_date = datetime.now().strftime('%Y-%m-%d')\n",
-    "    output_name = f'{current_date}_{batches}_Tier_2_Grouped_Pyramid_Order.xlsx'\n",
+    "    output_name = f'{current_date}_{batches}_Tier_2_Paired.xlsx'\n",
     "    df_pyramid_Two.to_excel(output_name, index=False)\n",
     "else:\n",
     "    print(\"No Tier 2 dataframe to rearrange\")\n"
@@ -970,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1221,7 +1222,7 @@
     "\n",
     "    # Save the ranked cells to an Excel file\n",
     "    current_date = datetime.now().strftime('%Y-%m-%d')\n",
-    "    output_name = f'{current_date}_{batches}_Tier_3_Grouped_Pyramid_Order.xlsx'\n",
+    "    output_name = f'{current_date}_{batches}_Tier_3_Paired.xlsx'\n",
     "    df_pyramid_Three.to_excel(output_name, index=False)\n",
     "else:\n",
     "    print(\"No Tier 3 dataframe to rearrange\")\n"
