Revert ML data pull back to SQL query
When it comes to ML data, current datahub only pulls MLD and MLB pouches. Since it does not contain info on QSC pouches, ML data querying is reverted back to SQL which relies on genealogy_v2.Will revert back to datahub once it can pull QSC info.

--- a/Cell_Tiering_Datahub.ipynb
+++ b/Cell_Tiering_Datahub.ipynb
@@ -14,28 +14,27 @@
    "outputs": [],
    "source": [
     "#Define Batches\n",
-    "batches = \"UCB004AB\"     #|UCB003AE-US00-24|UCB003AF-US00-24|UCB003AF-US00-26|UCB003AG-US00-02|UCB003AG-US00-15|UCB003AG-US00-34|UCB003AG-US00-35|\"\n",
+    "batches = \"UCB004AC\"     #|UCB003AE-US00-24|UCB003AF-US00-24|UCB003AF-US00-26|UCB003AG-US00-02|UCB003AG-US00-15|UCB003AG-US00-34|UCB003AG-US00-35|\"\n",
     "\n",
     "# Define Unit Cells in ML\n",
     "Layers = 3  # Number of unit cells in each MultiSlayer pouch\n",
     "\n",
     "# Specify any defective/cracked cells\n",
-    "DefectiveCells = [\"UCB003AL-US00-23\", \"UCB003AL-US00-40\", \"UCB003AN-US00-19\"]\n",
     "DefectiveCells = ['UCB004AB-US00-22', 'UCB004AB-US00-29']\n",
     "\n",
     "#Specify any missing cells\n",
     "MissingCells = [\"UCB003AL-US00-77\", \"UCB003AL-US00-63\", \"UCB003AL-US00-26\"]\n",
     "\n",
-    "#Group/Pair only cells that have a cell status of \"Waiting\"\n",
+    "#Only Group/Pair cells that have a cell status of \"Waiting\"\n",
     "GroupWaitingOnly = 1 #needs to be 1 to only pair \"Waiting\" cells \n",
     "\n",
     "#Show only yielded cells\n",
     "ShowOnlyYield = 1 #needs to be 1 to only shows cells that yielded according to datahub. Change this variable to show \"non-yielded\" cells as well \n",
     "\n",
     "#Grouping Criteria\n",
-    "ASR_range_limit = 2.0   #threshold for ASR range in group\n",
-    "ASR_mean_min_limit= 0.5 # threshold for ASR mean-min in group\n",
-    "max_attempts = 10   # how many times the pairing loop will run before giving up, it will reorder the remaining cells by ASR instead of Rank after max_attempts/2"
+    "ASR_range_limit = 2.0   #threshold for ASR range in ML \n",
+    "ASR_mean_min_limit= 0.5 # threshold for ASR mean-min in ML \n",
+    "max_attempts = 10   # how many times the pairing loop will run before giving up. It will reorder the remaining cells by ASR instead of Rank after max_attempts/2, increase this number if you still see possible groups in the \"Remainder\" cells"
    ]
   },
   {
@@ -47,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,6 +58,7 @@
     "from qsdc.client import Client\n",
     "#import functions used in this script\n",
     "import query_tray_samples_V4 as query_tray_samples\n",
+    "import genealogy_v2  ### remove this after datahub includes \"QSC\" codes\n",
     "#assert version(\"qs-data-client\") >= \"0.2.15\", \"qsdc version must be greater than 0.2.15\"\n",
     "\n",
     "#Remove warning messages\n",
@@ -190,11 +190,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Fill in tiering metrics based on data pulled from datahub\n",
+    "## Fill in tiering metrics based on data pulled from datahub\n",
     "\n",
     "## Rename Spreadsheet and sample/batch columns\n",
     "CellTiering = dfctq_updated[['US_id']].rename(columns={'US_id': 'Cell ID'}) \n",
@@ -254,10 +254,20 @@
     "CellTiering.loc[missing_or_zero, 'Cell Tier'] = 0 # Update 'Cell Status' for these rows\n",
     "\n",
     "\n",
+    "## Temprorary code while datahub includes \"QSC\" ML project codes\n",
+    "#Update if yielded cell is on already in a multilayer pouch\n",
+    "# Query dataframe from database\n",
+    "gen = genealogy_v2.get_genealogy_2L('APD|ML|UC|QSC', conn) # \n",
+    "# Map the 'US_id' to '6L_cell_id' using '2L_cell_id' in the 'gen' dataframe\n",
+    "us_to_ps_mapping = dict(zip(gen['2L_cell_id'], gen['6L_cell_id']))\n",
+    "CellTiering['Cell Status'] = CellTiering['Cell ID'].map(us_to_ps_mapping)\n",
+    "\n",
     "##Update 'Cell Status' if yielded cell is on already in a multilayer pouch, has high F2F Misalignment, or is Cracked/Scrapped\n",
     "#Update Cell if it is already in ML\n",
-    "merged_df = CellTiering.merge(dmlg, left_on='Cell ID', right_on='US_id', how='left') # Merge 'CellTiering' with 'dmlg' based on matching 'Cell ID' and 'US_id'\n",
-    "CellTiering['Cell Status'] = merged_df['ML6_id'].combine_first(CellTiering['Cell Status']) # Update 'Cell Status' in 'CellTiering' with corresponding 'ML6_id' where there is a match\n",
+    "#merged_df = CellTiering.merge(dmlg, left_on='Cell ID', right_on='US_id', how='left') # Merge 'CellTiering' with 'dmlg' based on matching 'Cell ID' and 'US_id'\n",
+    "#CellTiering['Cell Status'] = merged_df['ML6_id'].combine_first(CellTiering['Cell Status']) # Update 'Cell Status' in 'CellTiering' with corresponding 'ML6_id' where there is a match\n",
+    "\n",
+    "\n",
     "#Update Cell if it has high F2F Misalignment\n",
     "CellTiering.loc[CellTiering['Film-to-Film Distance'] == 'High', 'Cell Status'] = 'High F2F Alignment' \n",
     "#Update Cell if it is cracked\n",
@@ -270,6 +280,7 @@
     "CellTiering.loc[missing_or_zero, 'Cell Status'] = 'Missing Tiering Metrics' # Update 'Cell Status' for these rows\n",
     "#Fill in default status of 'Waiting'\n",
     "CellTiering['Cell Status'] = CellTiering['Cell Status'].fillna('Waiting')\n",
+    "\n",
     "\n",
     "\n",
     "## Update cell electrical metrics\n",
@@ -313,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1208,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
